# tinyrpc

./: CMakeLists.txt  README.md  autobuild.sh
example/: CMakeLists.txt  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  user_service.cc
example/caller/: CMakeLists.txt  call_user_service.cc
example/client/: call_user_service.cc
example/login/: CMakeLists.txt  client.cc  server.cc
example/server/: user_service.cc
image/: png.drawio
lib/include/: ErrorCode.h  MprpcChannel.h  MprpcProvider.h  ZookeeperUtil.h  mprpc_config.h  mprpc_provider.h  rpc_header.pb.h
src/: CMakeLists.txt  MprpcApplication.cc  MprpcChannel.cc  MprpcController.cc  MprpcProvider.cc  ZookeeperUtil.cc  mprpc_application.cc  mprpc_channel.cc  mprpc_config.cc  mprpc_controller.cc  mprpc_provider.cc  rpc_header.pb.cc  rpc_header.proto  zookeeper_util.cc
src/include/: MprpcApplication.h  MprpcController.h  MprpcProvider.h  mprpc_application.h  mprpc_channel.h  mprpc_provider.h  zookeeper_util.h
test/: Makefile  byte  byte.cc  format  format.cc  main  main.cc
test/protobuf/: a.out  main.cc  test.pb.cc  test.pb.h  test.proto
test/protobuf_test/: client.cc  echo_service.pb.cc  echo_service.pb.h  echo_service.proto
项目讲解/: 01.集群和分布式理论讲解.md  02.RPC通信原理.md  03.Protobuf介绍.md  05.客户端如何发起请求.md  06.如何发布本地服务为RPC服务.md  07.封装RpcController模块.md  08.Zookeeper分布式协调服务.md
